Improve compilation times in CMake by avoiding re-linking

--- a/APIDepTest/CMakeLists.txt
+++ b/APIDepTest/CMakeLists.txt
@@ -8,6 +8,4 @@ add_library(APIDepTest SHARED
 	src/APIDepTestPlugin.h
 	src/APIDepTestPlugin.cpp
 )
-target_link_libraries(APIDepTest HelloWorld)
-
-envision_plugin(APIDepTest)
+envision_plugin(APIDepTest HelloWorld)
