Change alloy integration project name.

--- a/Alloy/.project
+++ b/Alloy/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AlloyIntegration</name>
+	<name>Alloy</name>
 	<comment></comment>
 	<projects>
 		<project>Core</project>
