--- a/Alloy/CMakeLists.txt
+++ b/Alloy/CMakeLists.txt
@@ -1,23 +1,23 @@
 cmake_minimum_required(VERSION 3.2.2)
 
-project(AlloyIntegration)
+project(Alloy)
 include(../CMake/common.cmake)
 
-add_library(AlloyIntegration SHARED
+add_library(Alloy SHARED
 	src/precompiled.h
-	src/AlloyIntegrationException.h
-	src/alloyintegration_api.h
-	src/AlloyIntegrationPlugin.h
+	src/AlloyException.h
+	src/alloy_api.h
+	src/AlloyPlugin.h
 	src/commands/CAlloy.h
 	src/visitors/AlloyVisitor.h
 	src/exporter/AlloyExporter.h
-	src/AlloyIntegrationException.cpp
-	src/AlloyIntegrationPlugin.cpp
+	src/AlloyException.cpp
+	src/AlloyPlugin.cpp
 	test/SimpleTest.cpp
 	src/commands/CAlloy.cpp
 	src/visitors/AlloyVisitor.cpp
 	src/exporter/AlloyExporter.cpp
 )
 
-envision_plugin(AlloyIntegration ContractsLibrary)
+envision_plugin(Alloy ContractsLibrary)
 install(DIRECTORY alloy_data/ DESTINATION ${BUILD_DIR}/alloy)
