--- a/Launcher/CMakeLists.txt
+++ b/Launcher/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.2.2)
 project(Launcher)
 include(../CMake/common.cmake)
 
-add_executable( Envision src/precompiled.h src/launcher.cpp )
+add_executable( Envision src/launcher.cpp )
 
 target_link_libraries(Envision Core Qt5::Core Qt5::Gui)
 
